# Instances

./: README  com.github.bblock.instances.json  meson.build
data/: com.github.bblock.instances.appdata.xml.in  com.github.bblock.instances.desktop.in  com.github.bblock.instances.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  instances.gresource.xml  menu.ui  meson.build  window.ui  window.vala
